[1.540] update links for FAQ10 - faq/index.html

--- a/faq/index.html
+++ b/faq/index.html
@@ -78,14 +78,14 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
 <li><a href="faq4.html#Multibooting">Мультизагрузка</a>
 </ul>
 
-<h3><a href="https://www.openbsd.org/faq/faq10.html">System Management</a></h3>
+<h3><a href="faq10.html">Управление системой</a></h3>
 <ul>
-<li><a href="https://www.openbsd.org/faq/faq10.html#Patches"   >Обновления безопасности</a>
-<li><a href="https://www.openbsd.org/faq/faq10.html#rc"        >Системные демоны</a>
-<li><a href="https://www.openbsd.org/faq/faq10.html#doas"      >Запуск программ от имени другого пользователя</a>
-<li><a href="https://www.openbsd.org/faq/faq10.html#vipw"      >Редактирование password файла</a>
-<li><a href="https://www.openbsd.org/faq/faq10.html#SKey"      >Использование S/Key</a>
-<li><a href="https://www.openbsd.org/faq/faq10.html#Dir"       >Directory Services</a>
+<li><a href="faq10.html#Patches"   >Обновления безопасности (Security Updates)</a>
+<li><a href="faq10.html#rc"        >Системные демоны</a>
+<li><a href="faq10.html#doas"      >Выполнение команд от имени другого пользователя</a>
+<li><a href="faq10.html#vipw"      >Редактирование файла паролей</a>
+<li><a href="faq10.html#SKey"      >Использование S/Key</a>
+<li><a href="faq10.html#Dir"       >Служба каталогов (Directory Services)</a>
 </ul>
 
 <h3><a href="faq15.html">Работа с пакетами</a></h3>
